<resources>
    <string name="app_name">Notepad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOG IN</string>
    <string name="username">Username...</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">SIGNUP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">E-mail</string>
    <string name="notepad">NotePad</string>
    <string name="title_hint">Title...</string>
    <string name="add_your_note_here_hint">Add your note here...</string>
    <string name="logout">Logout</string>
</resources>