<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="25dp"
            android:layout_marginHorizontal="40dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="75dp"
                    android:layout_marginTop="30dp"
                    android:hint="@string/username"
                    android:background="@drawable/edittext_signup"
                    android:padding="10dp"
                    android:textColor="@color/gold"
                    android:textColorHint="@color/dull_gold"
                    android:id="@+id/signup_username"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="75dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/gold"
                    android:background="@drawable/edittext_signup"
                    android:padding="10dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/dull_gold"
                    android:id="@+id/signup_password"
                    android:inputType="textPassword"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="75dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/gold"
                    android:layout_marginBottom="25dp"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/dull_gold"
                    android:background="@drawable/edittext_signup"
                    android:padding="10dp"
                    android:id="@+id/signup_confirm_password"
                    android:inputType="textPassword"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/signup_button"
            android:background="@color/gold"
            android:textSize="50dp"
            android:textColor="@color/black"
            android:layout_marginTop="40dp"
            style="?android:borderlessButtonStyle"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp">

            <Button
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_button"
                android:padding="20dp"
                android:textSize="20dp"
                android:textColor="@color/gold"
                android:background="@drawable/login_button_style"
                android:text="@string/login"/>

        </RelativeLayout>
    </LinearLayout>

</FrameLayout>