<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_round_notes_24"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/gold"
            app:cardCornerRadius="25dp"
            android:layout_marginHorizontal="40dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:layout_marginTop="40dp"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:background="@drawable/edittext_login"
                    android:padding="10dp"
                    android:textColorHint="@color/dull_gold"
                    android:id="@+id/login_username"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="25dp"
                    android:hint="@string/password"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dull_gold"
                    android:background="@drawable/edittext_login"
                    android:padding="10dp"
                    android:id="@+id/login_password"
                    android:inputType="textPassword"/>

                <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:background="@color/gold"
                    android:textColor="@color/dull_gold"
                    android:textAllCaps="false"
                    android:clickable="true"
                    android:id="@+id/forgot_password_button"
                    android:layout_marginBottom="35dp"/>-->
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:padding="10dp"
            android:id="@+id/login_button"
            android:background="@drawable/black_button_gold_boundary"
            android:textSize="40sp"
            android:fontFamily="@font/raleway_semi_bold"
            android:textColor="@color/gold"
            android:layout_marginTop="40dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp">

            <Button
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/create_account_button"
                android:textColor="@color/black"
                android:background="@drawable/create_account_button_style"
                android:padding="20dp"
                android:fontFamily="@font/raleway_semi_bold"
                android:textSize="20dp"
                android:text="@string/sign_up"/>

        </RelativeLayout>
    </LinearLayout>

</FrameLayout>